--- a/Full_Example_GCN_Embedding_+_XGBoost_Classifier.ipynb
+++ b/Full_Example_GCN_Embedding_+_XGBoost_Classifier.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNiIAHm3QdMvUhZ5Nykwhu0",
+      "authorship_tag": "ABX9TyOS7940d33CTvx9az3CoKmV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -344,8 +344,7 @@
         "optimizer = torch.optim.Adam(model.parameters(), lr=0.01, weight_decay=5e-4)\n",
         "\n",
         "model.train()\n",
-        "\n",
-        "for epoch in range(200):\n",
+        "for epoch in range(100):  # Reduce epochs to prevent OOM\n",
         "    optimizer.zero_grad()\n",
         "    out = model(data.x, data.edge_index)\n",
         "    loss = F.cross_entropy(out[data.train_mask], data.y[data.train_mask])\n",
